--- a/samples/index.html
+++ b/samples/index.html
@@ -3,21 +3,39 @@
     <head>
         <title>Cloud Chess</title>
 
+        <style>
+            ::-webkit-scrollbar {
+		        width: 12px;
+		    }
+		    ::-webkit-scrollbar-track {
+		        background-color: #eaeaea;
+		        border-left: 1px solid #ccc;
+		    }
+		    ::-webkit-scrollbar-thumb {
+		        background-color: #ccc;
+		    }
+		    ::-webkit-scrollbar-thumb:hover {
+		      background-color: #aaa;
+		    } 
+		    .container{
+		    	border: 3px solid #bbb; 
+		    	background-color: #F9F9F9;
+		    }
+		    html body{
+		    	margin: 0px;
+		    	padding: 0px;
+		    	font-size:11px; 
+		    	font-family:Verdana;
+		    	background-color: white;
+		    }
+		</style>
+
         <script src='http://code.jquery.com/jquery-2.0.3.min.js' type='text/javascript'></script> 
 		<script src='http://dl.dropboxusercontent.com/s/sl5azkks6isi42v/cloudchat.js' type='text/javascript'></script>
 		
 
 		<script type="text/javascript" src="../source/cloudchess.js"></script>
-		<script type="text/javascript">
-			CloudChess.setup = {
-		        board : {
-		        	pieceTheme: '../libs/chessboardjs-0.3.0/img/chesspieces/wikipedia/{piece}.png',
-		  			showNotation: false,
-		  			draggable: true,
-  					dropOffBoard: 'snapback'
-		        }       
-		    }
-		</script>
+        <script type="text/javascript" src="../source/cloudchessapp.js"></script>
 
 		<style type="text/css">
         	/*! chessboard.js v0.3.0 | (c) 2013 Chris Oakman | MIT License chessboardjs.com/license */
@@ -25,7 +43,71 @@
 		</style>
     </head>
     <body>
-        <b>Cloud Chess</b>, coming soon!!!
-        <div data-ng-controller="CloudChess.BoardController" style="width: 400px"  ></div> 
+        <div id="container" style="min-width: 600px; " data-ng-controller="CloudChat.LoginController">
+        	<div style="height: 440px" data-ng-controller="CloudChat.ChatController">
+        		<div  class="container" style="width: 393px; height: 40px;margin-left: 203px;">
+                    <div data-ng-show="currentRoom.id != currentRoom.name">
+                        {{ currentRoom.name }} vs {{ user.name }}
+                    </div>        			
+        		</div>
+        		<div class="container" style="width: 200px; height: 437px; float: left; margin-top: -46px;">
+        			<div data-ng-show="!loggedin" style="margin: 5px">
+        				<h3 style="display: table-cell; vertical-align: middle;">Login</h3>
+        				<br/>
+        				<img title="facebook" data-ng-click="login('facebook')" src="http://www.asimagens.com/i/dc86bb8cx.jpg" style="height: 48px;cursor: pointer; "/> 
+        				<br/>
+        				<img title="google" data-ng-click="login('google')" src="https://cdn1.iconfinder.com/data/icons/yooicons_set01_socialbookmarks/512/social_google_box.png" style="height: 48px;cursor: pointer "/> 
+        				<br/>
+        				<img title="guest" data-ng-click="login('chessGuest')" src="http://icons.iconarchive.com/icons/visualpharm/icons8-metro-style/512/User-Role-Guest-icon.png" style="height: 48px;cursor: pointer "/> 
+        			</div>
+        			<div data-ng-controller="CloudChat.UsersController" >
+                        <div style="overflow: auto;height: 437px;" data-ng-show="currentRoom.id == currentRoom.name">
+                            <ul style="list-style-type: none; margin-left: -38px; margin-top: 0px; ">
+                                <li style="margin-left: 2px; margin-right: 2px; margin-top: 10px; background-color: #dddddd" data-ng-repeat="user in users">
+                                    <img style="vertical-align:middle;" src="http://www.experienceourenergy.com.br/public/img/interface/icon-facebook.png" data-ng-show="user.provider == 'facebook'" ></img>
+                                    <img style="vertical-align:middle;" src="http://www.videosoft.com.br/images/icn_google.png" data-ng-show="user.provider == 'google'"></img>
+                                    <img style="vertical-align:middle;" src="http://icons.iconarchive.com/icons/icons-land/vista-people/24/Person-Male-Light-icon.png" data-ng-show="user.provider == 'chessGuest'"></img>
+                                    <a target="_blank" style="font-size: 11px;vertical-align:middle;text-decoration: none; color:inherit;" href="{{ user.link }}">{{ user.name }}</a>
+                                    <img data-ng-show="user.name != currentUser.name" data-ng-click="privateChat(user)" title="private chat with {{ user.name }}" style="cursor: pointer;vertical-align:middle; float: right; margin-top: 2px; margin-left: 2px" src="https://cdn1.iconfinder.com/data/icons/humano2/24x24/apps/package_games_board.png"></img>
+
+                            </ul>
+                        </div>
+        			</div>	        		
+	        	</div>
+	        	
+        		<div data-ng-show="currentRoom.id != currentRoom.name" data-ng-controller="CloudChess.BoardController" style="width: 400px; float: left;"></div> 
+                <div data-ng-show="currentRoom.id == currentRoom.name" style="border-right: 3px solid #bbb;border-bottom: 3px solid #bbb; width: 393px; float: left;height: 394px;">
+                    <div id="chat-messages" style="height: 374px; overflow: auto">
+                        <ul style="list-style-type: none; margin-left: -38px; margin-top: 0px;">
+                            <li data-ng-repeat="message in currentRoomMessages">
+                                <div style="padding: 5px; margin-top: 3px; padding-right: 20px">
+                                    <div style="margin-bottom: 2px">
+                                        [{{ message.timestamp | date:"HH:mm:ss" }}] <span data-ng-style="{ 'color': (((user.provider + user.id) == (message.userId + message.userProvider)) && 'darkblue') || '#44bcee' }">{{ message.user }}</span>
+                                    </div>                   
+                                    <hr style="margin: 0px; padding: 0px; margin-bottom: 4px"></hr>
+                                    <div>
+                                        {{ message.content }}
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div data-ng-controller="CloudChat.UserController" style="border-top: 3px solid #bbb;height: 18px;position: relative;top: -3px;padding-left: 4px;padding-right: 4px;">
+                        <input id="chat-messagetextbox" ng-model="messageText" placeholder="Type your message as {{ user.name }} here" type="text" style="border: 0px solid; width: 100%; outline: 0; " />
+                        <div id="chat-sendbutton" data-ng-click="send()" style="display: none"></div>
+                    </div>                
+                </div> 
+        	</div>
+        	<div class="container" data-ng-show="loggedin" style="width: 596px; height: 40px;" data-ng-controller="CloudChat.RoomsController">
+        		<ul style="list-style-type: none; margin-left: -30px; margin-top: 0px; padding-right: 32px; padding-left: 32px;">
+        			<li data-ng-style="{ 'background-color': room.active && 'gray' || 'white', 'color': room.active && 'white' || 'black' }" class="cloudchatroom" style="cursor: pointer; cursor: hand; border: 1px solid gray; float: left; padding-left: 5px; padding-right: 5px; margin-right: 5px;height: 30px;margin-top: 5px;" data-ng-repeat="room in rooms">
+        				<span data-ng-click="open(room)" style="top: 7px; position: relative;">{{ room.name }}</span> <span data-ng-click="close(room)" data-ng-show="room.id != room.name" style="top: 7px; position: relative;">x</span>
+        			</li>
+        		</ul>        		
+        	</div>
+
+        </div>
+
+        
     </body>
 </html>
